--- a/echarts-demo/index.html
+++ b/echarts-demo/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>echarts demo</title>
+    <!-- 引入echarts -->
     <script src="js/echarts.js"></script>
 </head>
 <body>
