--- a/echarts-project/index.html
+++ b/echarts-project/index.html
@@ -333,6 +333,7 @@
                     </div>
                 </div>
             </div>
+            <!-- 热销模块 -->
             <div class="panel hot">
                 <div class="inner">
                     <div class="all">
