--- a/echarts-teacher-project/index.html
+++ b/echarts-teacher-project/index.html
@@ -6,6 +6,7 @@
 		<link rel="stylesheet" href="fonts/icomoon.css">
 		<link rel="stylesheet" href="css/reset.css">
 		<link rel="stylesheet" href="css/index.css">
+		<!-- 引入echarts -->
 		<script src="js/echarts.min.js"></script>
 		<script src="js/flexible.js"></script>
 		<script src="js/jquery.min.js"></script>
